# LumiTalk

./: .gitignore  README.md  settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts
app/src/androidTest/java/com/lumitalk/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/receive/: bridge.cpp  receive.cpp  receive.hpp  receive_center.cpp  receive_center.hpp  tracking.cpp  tracking.hpp
app/src/main/cpp/send/: bridge.cpp  send.cpp  send.hpp
app/src/main/java/com/lumitalk/: MainActivity.kt  NativeBridge.kt
app/src/main/java/com/lumitalk/navigation/: AppNavigation.kt  BottomNavItem.kt
app/src/main/java/com/lumitalk/ui/components/: AeLockButton.kt  CameraModeButton.kt  CameraPreview.kt  CameraPreviewCenter.kt  RecordButton.kt
app/src/main/java/com/lumitalk/ui/screens/: AnalyzeMenuScreen.kt  Capture120Screen.kt  MainScreen.kt  PlaceholderScreen.kt  ReceiveCenterScreen.kt  ReceiveScreen.kt  SendScreen.kt  VideoAnalysisScreen.kt
app/src/main/java/com/lumitalk/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/lumitalk/util/: CameraConfig.kt  CameraState.kt  FlashlightState.kt
app/src/main/java/com/lumitalk/util/camera/: CameraConfig.kt  CameraState.kt  GlesCropper.kt
app/src/main/java/com/lumitalk/util/codec/: DecoderState.kt  EncoderState.kt  MuxerState.kt
app/src/main/java/com/lumitalk/util/flashlight/: FlashlightState.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/lumitalk/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
